Remove height from playercard to prevent overlap

--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
 .player-card {
   flex: 0 0 auto;
   width: 100px;
-  height: 100px;
   text-align: center;
 }
 
